# hyperoot-terminal

./: .pre-commit-config.yaml  README.md  cliff.toml  mise.toml  pyproject.toml  requirements.txt  ruff.toml  ty.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: lint.yaml  release.yml
scripts/: setup.sh  setup_project.sh
src/hyperoot/: __init__.py  app.py  main.py  theme.py
