[project]
name = "hyperoot-terminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["hyperoot", "rajeshdas"]

[tool.uv.sources]
hyperoot = { workspace = true }
rajeshdas = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.14", "ty>=0.0.14"]
