[project]
name = "hyperoot-terminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["rajeshdas"]

[tool.uv.sources]
rajeshdas = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = ["pre-commit>=4.6.0", "ruff>=0.15.12", "ty>=0.0.34"]
